tests/binary/errors/pack_u16_range.dby
import std.binary as bin

print(bin.pack_u16_le(70000))
